addressed KS comments on survival methods

--- a/analysis/markdown/AckermanLibrary.bib
+++ b/analysis/markdown/AckermanLibrary.bib
@@ -3742,6 +3742,12 @@
   file = {C\:\\Users\\mikea\\Zotero\\storage\\3ZFSMW6P\\Sovic et al. - 2015 - AftrRAD a pipeline for accurate and efficient .pdf}
 }
 
+@misc{StanDevelopmentTeam2022,
+  title = {{{RStan}}: The {{R}} Interface to {{Stan}}},
+  author = {{Stan Development Team}},
+  year = {2022}
+}
+
 @article{Stanfield1998,
   title = {A Comparison of Full-Station Visual and Transect Based Methods of Conducting Habitat Surveys in Support of Habitat Suitability Index Models for Southern {{Ontario}}},
   author = {Stanfield, L.W. and Jones, M.L.},
@@ -4396,6 +4402,10 @@
   institution = {{Washington Department of Fish and Wildlife. Olympia, Washington.}},
   langid = {english},
   file = {C\:\\Users\\mikea\\Zotero\\storage\\556I6FSW\\Zimmerman et al. - Intensively Monitored Watersheds Program An Updat.pdf}
+}
+
+@misc{zotero-undefined,
+  type = {Misc}
 }
 
 
